[package]
name = "smf-jni"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smf ={ package = "smf", version = "0.1.0", path = "../smf" }
jni ={ version = "0.20", default-features = false}

[features]
jni = []